--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@ body {
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 97vh;
+    /* cursor: url("../images/pen-cursor.png") , auto; */
+    cursor: url("../images/tap.png") , auto;
 }
 
 /* Start Calculator */
@@ -27,13 +29,14 @@ body {
 .calculator button {
     border: none;
     background-color: transparent;
-    cursor: pointer;
     color: white;
     background: transparent;
     width: 40px;
     height: 40px;
     border-radius: 50%; 
     padding: 0;
+    /* cursor: url("../images/pen-cursor.png") , auto; */
+    cursor: url("../images/tap.png") , auto;
 }
 
 .calculator button:hover:not(button[onclick="calculate()"]) {
